--- a/Style/style.css
+++ b/Style/style.css
@@ -1,99 +1,95 @@
-body 
-{
-    margin:0;
+body {
+    margin: 0;
 }
 
-header
-{
-    background-color:#6CC551;
+header {
+    background-color: #6CC551;
     width: 100vw;
     height: 100vh;
 }
+
 /* Estilos para la barra de menú */
-nav
-{
+nav {
     background-color: #6CC551;
     width: 100vw;
     height: 15%;
     padding: 10px;
     display: flex;
     align-items: center;
+    justify-content: space-between; /* Separa la imagen y los enlaces */
     position: fixed;
     box-shadow: 0px 0px 10px 10px black;
 }
 
 /* Estilos para la imagen del logotipo */
-nav img
-{
+nav img {
     width: 100px;
     height: 100px;
-    margin-right: 20px;
+    margin-left: 20px; /* Aseguramos que la imagen quede alineada a la izquierda */
 }
 
 /* Estilos para la lista del menú */
-ul 
-{
+ul {
     list-style-type: none;
-    margin: 0;
+    margin: 0 auto; /* Centramos el ul dentro del nav */
     padding: 0;
+    display: flex;
+    justify-content: center; /* Centramos los elementos del menú */
+    align-items: center;
+    width: 100%; /* Aseguramos que el ul use el espacio disponible */
 }
 
 /* Enlaces del menú */
-ul li a
-{
-    margin-right: 20px;
+ul li a {
+    margin-right: 80px;
     background-color: #52AD9C;
-    border-radius:20px;
+    border-radius: 20px;
     color: #FFF;
     text-decoration: none;
     padding: 10px 12px;
-    display: flex;
+    display: block;
 }
 
-ul li a:hover 
-{
+ul li a:hover {
     background: #FFF;
     color: #000;
 }
 
- /* Flecha hacia abajo en los elementos del menú */
-ul li a::after 
-{
+/* Flecha hacia abajo en los elementos del menú */
+ul li a::after {
     content: " ▼";
 }
 
-
-ul li ul 
-{
-    display: none;
-    position: absolute;
-    min-width: 150px;
-}
-
-ul li:hover ul 
-{
+ul li:hover ul {
     display: block;
 }
 
-ul li ul li 
-{
-    position: relative;
+.menu-vertical {
+    padding: 0;
+    position: absolute;
+    list-style: none;
+    display: none;
+    width: 200px;
+    background-color: rgb(239, 236, 236);
 }
 
-ul li ul li ul 
-{
-    right: -140px;
-    top: 8px;
+.menu-vertical li a {
+    display: block;
+    color: red;
+    padding: 15px 15px 15px 20px;
+    text-decoration: none;
 }
 
-ul > li
-{
+.menu-vertical li hover {
+    background-color: black;
+}
+
+ul > li {
     float: left;
 }
 
-main
-{
-    background-color:white;
+main {
+    background-color: white;
     width: 100vw;
     height: 100vh;
 }
