--- a/Style/style.css
+++ b/Style/style.css
@@ -8,7 +8,6 @@ header {
     height: 100vh;
 }
 
-/* Estilos para la barra de menú */
 nav {
     background-color: #6CC551;
     width: 100vw;
@@ -16,30 +15,27 @@ nav {
     padding: 10px;
     display: flex;
     align-items: center;
-    justify-content: space-between; /* Separa la imagen y los enlaces */
+    justify-content: space-between; 
     position: fixed;
     box-shadow: 0px 0px 10px 10px black;
 }
 
-/* Estilos para la imagen del logotipo */
 nav img {
     width: 100px;
     height: 100px;
-    margin-left: 20px; /* Aseguramos que la imagen quede alineada a la izquierda */
+    margin-left: 20px; 
 }
 
-/* Estilos para la lista del menú */
 ul {
     list-style-type: none;
-    margin: 0 auto; /* Centramos el ul dentro del nav */
+    margin: 0 auto; 
     padding: 0;
     display: flex;
-    justify-content: center; /* Centramos los elementos del menú */
+    justify-content: center; 
     align-items: center;
-    width: 100%; /* Aseguramos que el ul use el espacio disponible */
+    width: 100%; 
 }
 
-/* Enlaces del menú */
 ul li a {
     margin-right: 80px;
     background-color: #52AD9C;
@@ -55,7 +51,7 @@ ul li a:hover {
     color: #000;
 }
 
-/* Flecha hacia abajo en los elementos del menú */
+
 ul li a::after {
     content: " ▼";
 }
@@ -70,7 +66,7 @@ ul li:hover ul {
     list-style: none;
     display: none;
     width: 200px;
-    background-color: rgb(239, 236, 236);
+    background-color: transparent;
 }
 
 .menu-vertical li a {
