--- a/Style/style.css
+++ b/Style/style.css
@@ -1,5 +1,7 @@
 body {
     margin: 0;
+    font-family: 'Times New Roman', Times, serif;
+    background-color: #f4f4f4;
 }
 
 header {
@@ -142,6 +144,7 @@ main {
 }
 
 .texto {
+    font-family: Arial, Helvetica, sans-serif;
     text-align: left;
     font-size: 3rem;
     font-weight: bolder;
@@ -213,7 +216,85 @@ main {
 }
 
 aside{
-    background-color: green;
+    background-color: #447604;
     width: 100vw;
     height: auto; 
+}
+
+.titulo-aside
+{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 40pt;
+}
+
+.parrafo
+{
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    font-size: 14pt;
+}
+
+.precios {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.plan {
+    background-color: #47624f;
+    border-radius: 10px;
+    padding: 20px;
+    width: 300px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+}
+
+.plan:hover {
+    transform: translateY(-10px);
+}
+
+.plan h2 {
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: white;
+}
+
+.precio {
+    text-align: center;
+    font-size: 48px;
+    color: white;
+    font-weight: bold;
+}
+
+.lista {
+    list-style-type: none;
+    padding: 0;
+    margin: 20px 0;
+}
+
+.item {
+    background-color: rgba(255, 255, 255, 0.1);
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 5px;
+    color: white;
+    text-align: left;
+}
+
+button {
+    background-color: #52AD9C;
+    border: none;
+    padding: 10px 20px;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    text-align: center;
+    margin: 20px 0;
+}
+
+button:hover {
+    background-color: #447604;
 }
