--- a/Style/style.css
+++ b/Style/style.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     font-family: 'Times New Roman', Times, serif;
-    background-color: #f4f4f4;
 }
 
 header {
@@ -296,4 +295,87 @@ button {
 
 button:hover {
     background-color: #447604;
+}
+
+.noticias {
+    background-color: white;
+    width: 100vw;
+    height: auto; 
+    padding: 20px;  
+    box-sizing: border-box; 
+}
+
+.sub-noticias {
+    padding-top: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    font-size: 36pt;
+    margin-bottom: 30px; 
+}
+
+.contenedor2 {
+    display: flex;
+    gap: 30px; 
+    padding: 20px;  
+}
+
+.principal {
+    flex: 3;
+    background-color: #d4e7d6;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    box-sizing:border-box;
+}
+
+.principal img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.principal h2 {
+    margin-top: 15px;
+    font-size: 1.7em; 
+}
+
+.otros {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 30px; 
+}
+
+.articulo {
+    background-color: white;
+    padding: 15px; 
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+}
+
+.articulo:hover {
+    transform: translateY(-5px); 
+}
+
+.articulo img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.articulo h3 {
+    font-size: 1.4em; 
+    margin: 10px 0;
+}
+
+.articulo a {
+    text-decoration: none;
+    color: #007BFF;
+    font-weight: bold;
+}
+
+.articulo a:hover {
+    text-decoration: underline;
 }
