--- a/Style/style2.css
+++ b/Style/style2.css
@@ -73,14 +73,15 @@ body {
 }
 
 .registro {
+    text-decoration: none;
     background-color: #a3f5a3;
     color: #333333;
     border: none;
-    padding: 10px;
+    padding: 5px;
     width: 100%;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 10px;
+    margin-top: 50px;
 }
 
 .registro:hover {
