--- a/Style/style6.css
+++ b/Style/style6.css
@@ -5,6 +5,7 @@ body {
     flex-direction: column;
     height: 100vh;
     background-color: white; 
+}
 
 .container {
     background-color: #447604; 
