--- a/Style/style6.css
+++ b/Style/style6.css
@@ -19,7 +19,7 @@ body {
 }
 
 .report {
-    background-color: #F0F0F0; 
+    background-color: #9ffcdf; 
     padding: 20px;
     border-radius: 10px;
     margin-bottom: 20px;
